--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Listagem de projetos</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <h1>Sistema de listagem de projetos</h1>
     <button id="btn-carregar">Carregar projetos</button>
     <div id="lista-projetos"></div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
